Fixed image overlapping button on home page

--- a/audiophile-client/src/app/home/home.component.scss
+++ b/audiophile-client/src/app/home/home.component.scss
@@ -65,7 +65,6 @@ img {
   text-align: center;
   border-radius: 0.5em;
   position: relative;
-  // z-index: -10;
 }
 
 .pattern {
@@ -74,7 +73,7 @@ img {
   height: 100%;
   object-fit: cover;
   top: -20%;
-  // z-index: -5;
+  pointer-events: none;
 }
 
 .product--orange .product__title {
